# KristionJones

./: .gitignore  README.md
.github/workflows/: honeypot-ci.yml
detection-engineering/: README.md  requirements.txt
detection-engineering/parser/: detect.py
detection-engineering/sigma/: ssh_bruteforce.yml  web_exploit_probes.yml
docs/: RESUME-BULLETS.md
honeypot-dashboard/: README.md  config.yaml  requirements.txt
honeypot-dashboard/dashboard/: server.py
honeypot-dashboard/dashboard/static/: app.js  index.html
honeypot-dashboard/honeypot/: __init__.py  enrich.py  sensor.py  services.py  storage.py
honeypot-dashboard/tests/: test_honeypot.py
honeypot-dashboard/tools/: simulate_attacks.py
malware-analysis/: README.md  requirements.txt  static_analyzer.py
malware-analysis/reports/: REPORT-TEMPLATE.md  eicar-analysis.md
malware-analysis/rules/: malware_heuristics.yar
malware-analysis/samples/: README.md
phishing-analyzer/: README.md  phishing_analyzer.py  requirements.txt
phishing-analyzer/samples/: legitimate_sample.eml  phishing_sample.eml
phishing-analyzer/tests/: test_phishing.py
projects/01-honeypot/: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
projects/01-honeypot/docs/: ARCHITECTURE.md
projects/01-honeypot/honeypot/: __init__.py  cli.py  config.py  dashboard.py  geo.py  iocs.py  sensor.py  storage.py
projects/01-honeypot/honeypot/templates/: index.html
projects/01-honeypot/tests/: conftest.py  test_cli.py  test_dashboard.py  test_geo.py  test_iocs.py  test_sensor.py  test_storage.py
